--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,311 @@
-/*# sourceMappingURL=style.css.map */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  color: var(--white);
+}
+
+/* Set core root defaults */
+html {
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  height: 100vh;
+}
+
+/* Set core body defaults */
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  background-image: url("../img/vec-1.png");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav ul li a,
+footer a {
+  font-family: var(--body-font);
+}
+
+p,
+button {
+  font-family: var(--heading-font);
+}
+
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+:root {
+  --dark-blue-intro-email-signup: hsl(217, 28%, 15%);
+  --dark-blue-main: hsl(218, 28%, 13%);
+  --dark-blue-footer: hsl(216, 53%, 9%);
+  --dark-blue-testimonials: hsl(219, 30%, 18%);
+  --cyan-call-to-action: hsl(176, 68%, 64%);
+  --blue-call-to-action: hsl(198, 60%, 50%);
+  --light-red-error: hsl(0, 100%, 63%);
+  --white: hsl(0, 0%, 100%);
+  --heading-font: "Open Sans", sans-serif;
+  --body-font: "Raleway", sans-serif;
+}
+
+@media screen and (min-width: 375px) {
+  body {
+    background-color: var(--dark-blue-main);
+  }
+  nav {
+    width: 95%;
+    margin: 0 auto;
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+  }
+  nav .logo img {
+    width: 80%;
+  }
+  nav ul {
+    display: flex;
+    gap: 10px;
+  }
+  nav ul li {
+    list-style: none;
+  }
+  main {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    background-color: var(--dark-blue-main);
+  }
+  main .hero-img {
+    margin-top: 50px;
+  }
+  main h2 {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  main p {
+    line-height: 1.7;
+    margin-bottom: 30px;
+  }
+  main button {
+    width: 80%;
+    border: none;
+    padding: 15px 5px;
+    background-image: linear-gradient(to right, var(--cyan-call-to-action), var(--blue-call-to-action));
+    border-radius: 50px;
+    margin-bottom: 150px;
+  }
+  .cards {
+    display: flex;
+    flex-direction: column;
+  }
+  .cards .top-div div,
+  .cards .bottom-div div {
+    width: 90%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .cards .top-div div h4,
+  .cards .bottom-div div h4 {
+    font-size: 22px;
+    font-weight: 700;
+    margin: 30px 0 10px 0;
+  }
+  .cards .top-div div p,
+  .cards .bottom-div div p {
+    text-align: center;
+    font-weight: 100;
+  }
+  .cards .top-div .first {
+    margin-top: 0;
+  }
+  .cards .bottom-div .second {
+    margin-bottom: 150px;
+  }
+  .stay-productive {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .stay-productive h2 {
+    font-weight: 700;
+    font-size: 20px;
+    margin: 15px 0;
+  }
+  .stay-productive p {
+    font-weight: 100;
+    margin: 10px 0;
+  }
+  .stay-productive .link {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border-bottom: 1px solid var(--cyan-call-to-action);
+    width: -moz-fit-content;
+    width: fit-content;
+    color: var(--cyan-call-to-action);
+    margin-bottom: 100px;
+  }
+  .stay-productive .link a {
+    color: var(--cyan-call-to-action);
+    font-family: var(--heading-font);
+  }
+  .testimonials {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .testimonials .testimoni-1,
+  .testimonials .testimoni-2,
+  .testimonials .testimoni-3 {
+    margin: 30px 0;
+    padding: 20px 20px;
+    background-color: var(--dark-blue-testimonials);
+  }
+  .testimonials .testimoni-1 .user,
+  .testimonials .testimoni-2 .user,
+  .testimonials .testimoni-3 .user {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .testimonials .testimoni-1 .user img,
+  .testimonials .testimoni-2 .user img,
+  .testimonials .testimoni-3 .user img {
+    width: 15%;
+    border-radius: 50%;
+  }
+  .email-signup {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+    background-color: var(--dark-blue-intro-email-signup);
+  }
+  .email-signup h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  .email-signup p {
+    font-weight: 100;
+  }
+  .email-signup .inputs input,
+  .email-signup .inputs button {
+    width: 100%;
+    margin: 10px 0;
+    padding: 20px 10px;
+    border-radius: 50px;
+    border: none;
+  }
+  .email-signup .inputs input {
+    background-color: var(--white);
+    margin-top: 30px;
+    font-family: var(--heading-font);
+    padding-left: 30px;
+    color: black;
+  }
+  .email-signup .inputs button {
+    background-color: var(--cyan-call-to-action);
+  }
+  footer {
+    background-color: var(--dark-blue-footer);
+  }
+  footer .footer-element-wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+  footer .footer-element-wrapper .logo-text {
+    padding-bottom: 20px;
+  }
+  footer .footer-element-wrapper .logo-text .first-img {
+    padding-top: 40px;
+    margin-bottom: 40px;
+  }
+  footer .footer-element-wrapper .logo-text .text {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  footer .footer-element-wrapper .contact-info .phone,
+  footer .footer-element-wrapper .contact-info .email {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+  footer .footer-element-wrapper .contact-info .phone {
+    padding: 10px 0;
+  }
+  footer .footer-element-wrapper .contact-info .email {
+    padding-bottom: 40px;
+  }
+  footer .footer-element-wrapper .link1,
+  footer .footer-element-wrapper .link2 {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .footer-element-wrapper .link1 {
+    padding-bottom: 25px;
+  }
+  footer .footer-element-wrapper .link2 {
+    padding-bottom: 50px;
+  }
+  footer .footer-element-wrapper .socials {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px 0 40px 0;
+  }
+  footer .footer-element-wrapper .socials svg {
+    width: 10%;
+    fill: white;
+  }
+}/*# sourceMappingURL=style.css.map */
