--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -13,6 +13,7 @@
   // background-color: var(--dark-blue-intro-email-signup);
   //   font-family: var(--body-font);
   color: var(--white);
+  transition: all 0.2s;
 }
 
 /* Set core root defaults */
