--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
   padding: 0;
   font: inherit;
   color: var(--white);
+  transition: all 0.2s;
 }
 
 /* Set core root defaults */
@@ -95,7 +96,7 @@ svg {
   --body-font: "Raleway", sans-serif;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 360px) {
   body {
     background-color: var(--dark-blue-main);
   }
@@ -107,6 +108,7 @@ svg {
     margin: 0 auto;
     min-height: 10vh;
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
   nav .nav-elements .logo img {
@@ -118,6 +120,9 @@ svg {
   }
   nav .nav-elements ul li {
     list-style: none;
+  }
+  nav .nav-elements ul li a {
+    font-size: 15px;
   }
   main {
     background-color: var(--dark-blue-intro-email-signup);
@@ -151,20 +156,12 @@ svg {
   .cards {
     display: flex;
     flex-direction: column;
-  }
-  .cards ::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: url("../images/bg-curvy-mobile.svg");
-    width: 100%;
-    z-index: -1;
+    padding-top: 100px;
   }
   .cards .top-div div,
   .cards .bottom-div div {
     width: 90%;
+    max-width: 500px;
     margin: 50px auto;
     display: flex;
     flex-direction: column;
@@ -214,120 +211,240 @@ svg {
     color: var(--cyan-call-to-action);
     font-family: var(--heading-font);
   }
-  .for-email-sec {
-    position: relative;
-  }
-  .for-email-sec .testimonials {
+  .testimonials {
     width: 90%;
-    margin: 0 auto 400px auto;
+    margin: 0 auto 200px auto;
   }
-  .for-email-sec .testimonials .testimoni-1,
-  .for-email-sec .testimonials .testimoni-2,
-  .for-email-sec .testimonials .testimoni-3 {
+  .testimonials .testimoni-1,
+  .testimonials .testimoni-2,
+  .testimonials .testimoni-3 {
     margin: 30px 0;
     padding: 20px 20px;
     background-color: var(--dark-blue-testimonials);
   }
-  .for-email-sec .testimonials .testimoni-1 .user,
-  .for-email-sec .testimonials .testimoni-2 .user,
-  .for-email-sec .testimonials .testimoni-3 .user {
+  .testimonials .testimoni-1 p,
+  .testimonials .testimoni-2 p,
+  .testimonials .testimoni-3 p {
+    color: rgb(224, 220, 220);
+    font-weight: 100;
+  }
+  .testimonials .testimoni-1 .user,
+  .testimonials .testimoni-2 .user,
+  .testimonials .testimoni-3 .user {
     margin-top: 20px;
     display: flex;
     align-items: center;
     gap: 10px;
   }
-  .for-email-sec .testimonials .testimoni-1 .user img,
-  .for-email-sec .testimonials .testimoni-2 .user img,
-  .for-email-sec .testimonials .testimoni-3 .user img {
-    width: 15%;
+  .testimonials .testimoni-1 .user img,
+  .testimonials .testimoni-2 .user img,
+  .testimonials .testimoni-3 .user img {
+    width: 10%;
     border-radius: 50%;
   }
-  .for-email-sec .email-signup {
+  .testimonials .testimoni-1 .user .names p:nth-of-type(1),
+  .testimonials .testimoni-2 .user .names p:nth-of-type(1),
+  .testimonials .testimoni-3 .user .names p:nth-of-type(1) {
+    font-weight: 700;
+    margin-bottom: 3px;
+    font-size: 15px;
+  }
+  .testimonials .testimoni-1 .user .names p:nth-of-type(2),
+  .testimonials .testimoni-2 .user .names p:nth-of-type(2),
+  .testimonials .testimoni-3 .user .names p:nth-of-type(2) {
+    font-size: 12px;
+  }
+  .email-signup {
     width: 90%;
-    margin: 0 auto;
+    max-width: 700px;
+    margin: 0 auto -150px;
     padding: 20px;
     text-align: center;
     background-color: var(--dark-blue-intro-email-signup);
-    position: absolute;
-    top: 47%;
-    left: 20px;
+    position: relative;
   }
-  .for-email-sec .email-signup h2 {
+  .email-signup h2 {
     font-size: 20px;
     font-weight: 700;
   }
-  .for-email-sec .email-signup p {
+  .email-signup p {
     font-weight: 100;
   }
-  .for-email-sec .email-signup .inputs input,
-  .for-email-sec .email-signup .inputs button {
+  .email-signup .inputs input,
+  .email-signup .inputs button {
     width: 100%;
     margin: 10px 0;
     padding: 20px 10px;
     border-radius: 50px;
     border: none;
   }
-  .for-email-sec .email-signup .inputs input {
+  .email-signup .inputs input {
     background-color: var(--white);
     margin-top: 30px;
     font-family: var(--heading-font);
     padding-left: 30px;
     color: black;
   }
-  .for-email-sec .email-signup .inputs button {
+  .email-signup .inputs button {
     background-color: var(--cyan-call-to-action);
   }
-  .for-email-sec footer {
+  footer {
     padding-top: 200px;
     background-color: var(--dark-blue-footer);
+    width: 100%;
   }
-  .for-email-sec footer .footer-element-wrapper {
+  footer .footer-element-wrapper {
     width: 90%;
     margin: 0 auto;
   }
-  .for-email-sec footer .footer-element-wrapper .logo-text {
+  footer .footer-element-wrapper .logo-text {
     padding-bottom: 20px;
   }
-  .for-email-sec footer .footer-element-wrapper .logo-text .first-img {
+  footer .footer-element-wrapper .logo-text .first-img {
     padding-top: 40px;
     margin-bottom: 40px;
   }
-  .for-email-sec footer .footer-element-wrapper .logo-text .text {
+  footer .footer-element-wrapper .logo-text .text {
     display: flex;
     align-items: flex-start;
     gap: 20px;
   }
-  .for-email-sec footer .footer-element-wrapper .contact-info .phone,
-  .for-email-sec footer .footer-element-wrapper .contact-info .email {
+  footer .footer-element-wrapper .contact-info .phone,
+  footer .footer-element-wrapper .contact-info .email {
     display: flex;
     gap: 20px;
     align-items: center;
   }
-  .for-email-sec footer .footer-element-wrapper .contact-info .phone {
+  footer .footer-element-wrapper .contact-info .phone {
     padding: 10px 0;
   }
-  .for-email-sec footer .footer-element-wrapper .contact-info .email {
+  footer .footer-element-wrapper .contact-info .email {
     padding-bottom: 40px;
   }
-  .for-email-sec footer .footer-element-wrapper .link1,
-  .for-email-sec footer .footer-element-wrapper .link2 {
+  footer .footer-element-wrapper .link1,
+  footer .footer-element-wrapper .link2 {
     display: flex;
     flex-direction: column;
   }
-  .for-email-sec footer .footer-element-wrapper .link1 {
+  footer .footer-element-wrapper .link1 {
     padding-bottom: 25px;
   }
-  .for-email-sec footer .footer-element-wrapper .link2 {
+  footer .footer-element-wrapper .link2 {
     padding-bottom: 50px;
   }
-  .for-email-sec footer .footer-element-wrapper .socials {
+  footer .footer-element-wrapper .socials {
     display: flex;
     justify-content: center;
     gap: 20px;
     padding: 20px 0 40px 0;
   }
-  .for-email-sec footer .footer-element-wrapper .socials svg {
-    width: 10%;
+  footer .footer-element-wrapper .socials svg {
+    width: 7%;
     fill: white;
+  }
+}
+@media screen and (min-width: 668px) {
+  .testimonials {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .testimonials * {
+    width: 100%;
+    max-width: 500px;
+  }
+  footer {
+    padding-bottom: 50px;
+  }
+  footer .footer-element-wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 50px;
+  }
+  footer .footer-element-wrapper .logo-text {
+    max-width: 400px;
+  }
+  footer .footer-element-wrapper .link1,
+  footer .footer-element-wrapper .link2 {
+    max-width: 500px;
+  }
+  footer .footer-element-wrapper .socials {
+    width: 400px;
+  }
+  footer .footer-element-wrapper .socials svg {
+    width: 10%;
+  }
+}
+@media screen and (min-width: 922px) {
+  .testimonials {
+    margin-bottom: 200px;
+  }
+  .testimonials .testimoni-1,
+  .testimonials .testimoni-2,
+  .testimonials .testimoni-3 {
+    padding: 50px 20px;
+  }
+  .testimonials * {
+    width: 100%;
+  }
+  footer .socials svg {
+    width: 7%;
+  }
+}
+@media screen and (min-width: 911px) {
+  main .main-elements {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  main .main-elements h2 {
+    max-width: 600px;
+  }
+  main .main-elements p {
+    max-width: 700px;
+  }
+  main .main-elements button {
+    max-width: 300px;
+  }
+  .cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-direction: row;
+    margin-bottom: 100px;
+  }
+  .cards div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards .top-div .first {
+    margin-top: 50px;
+  }
+  .cards .bottom-div .second {
+    margin-bottom: 50px;
+  }
+  footer .socials svg {
+    width: 7%;
+  }
+}
+@media screen and (min-width: 1214px) {
+  .stay-productive {
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+  .stay-productive .left {
+    max-width: 500px;
+  }
+  footer .socials svg {
+    width: 7%;
   }
 }/*# sourceMappingURL=style.css.map */
